--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
+#      - name: Validate Gradle Wrapper
+#        uses: gradle/wrapper-validation-action@v1
         
       - name: Setup Android SDK
         run: |
